--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container h-100 d-flex align-items-center">
       <div class="row">
         <header class="text-center col-12">
-          <h1 class="text-uppercase"><strong>BIGGEST Startup Event of the Year</strong></h1>
+          <h1 class="text-uppercase"><strong>Largest Startup Event.</strong></h1>
         </header>
         <div class="buffer col-12"></div>
         <section class="text-center col-12">
